Add tools content